Avoid scroll flicker with hidden overflow, instead of 40px padding

--- a/src/pages/portfolio/projects/project.module.scss
+++ b/src/pages/portfolio/projects/project.module.scss
@@ -109,7 +109,7 @@
 }
 
 .gallery {
-    padding-bottom: 40px;
+    overflow-y: hidden;
 }
 
 .allphotos {
